Only constrain popups to parent windows when there's enough space to do so

Otherwise, they will be aligned to the right side of the parent window,
even in conditions where it does not make sense to do so. As an example,
widgets in very small panels.

BUG: 494338
FIXED-IN: 6.2.1


(cherry picked from commit a345268b8da7b3769d9766d768a931d3cef856c6)

a41b675c Only constrain popups to parent windows when there's enough space to do so

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>